Puppet/Colorado/modules/iptables/files/etc/sysconfig/iptables-default
# Generated by iptables-save v1.4.21 on Wed Apr 11 11:23:24 2018
#
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:282]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -p ah -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m state --state NEW -m tcp -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m state --state NEW -m udp -j ACCEPT
-A INPUT -s 172.16.9.0/24 -p tcp -m state --state NEW -m tcp -j ACCEPT
-A INPUT -s 172.16.9.0/24 -p udp -m state --state NEW -m udp -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Apr 11 11:23:24 2018
